# local-growth-ops

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
clients/example-client/: README.md  config.yaml
docs/: OVERALL_PLAN.md  local-state.md  privacy-retention-safety.md  website-payload-contract.md
lead_hub/: README.md  __init__.py  assistant.py  config_loader.py  followup_scheduler.py  ingest_website_payload.py  list_due_followups.py  list_leads.py  manual_lead.py  notify_approvals.py  process_due_followups.py  process_lead.py  process_new_leads.py  storage.py  telegram_approval.py  validate_client.py  weekly_report.py
lead_hub/schemas/: __init__.py  assistant_workflow.py  client_config.py  intake.py  lead.py
openclaw/: __init__.py
openclaw/agents/: __init__.py
openclaw/agents/followup-assistant/: README.md  instructions.md
openclaw/agents/followup-assistant/prompts/: classify.md  (+4 more)
planning/: 0001-scaffold-follow-up-ops-workspace.md  0002-client-assistant-config-schema.md  0003-lead-hub-storage-model.md  0004-intake-adapters.md  0005-openclaw-assistant-prompts.md  0006-lead-classification-draft-workflow.md  0007-telegram-operator-approval-workflow.md  0008-follow-up-scheduler-weekly-report.md  0009-mac-mini-openclaw-production-runbook.md  0010-privacy-retention-safety-policy.md  README.md
runbooks/: README.md  mac-mini-production.md
tests/: README.md  __init__.py  test_client_config.py  test_followup.py  test_intake_adapters.py  test_lead_storage.py  test_prompt_library.py  test_telegram.py  test_workflow.py
tests/fixtures/: website_payload_valid.json
(+10 files in other folders)
