[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-growth-ops"
version = "0.1.0"
description = "Openclaw follow-up assistant ops workspace"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lead_hub*", "openclaw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
